# textrec

./: .gitignore  .gitmodules  2019-07-09 trend towards questions-in-same-category being more helpful.jrp  LICENSE  Makefile  Pipfile  Pipfile-aside  Pipfile.lock-aside  README.md  README.protocol.md  analyze_design_study.jsl  analyze_spec1.jsl  blocked_analysis.jsl  fabfile.py  final_analysis.jsl  graph_helpfulRanks.jsl  other_analyses.jsl  pyproject-opennmt.toml  pyproject.toml  requirements.txt  run_analysis.jsl  run_notebook  setup.py  simplified_analysis.jsl
HITs/: 2018-04-09.html  2018-05-04-image-description-match.jinja.html  restaurant_hit.html  specificity_comparisons.csv  uniqueturker.txt  url_cap_gcp.csv  url_design1.csv  url_gatedcap_gcp.csv  url_idea3.csv  url_movie.csv  url_restaurant.csv  url_spec2.csv  url_xs.csv
data/: invalid.txt  participants.txt
docs/: conf.py  make.bat
notebooks/: Analysis-Gated.ipynb  Analysis.ipynb  Analyze Gating.ipynb  AnalyzeAllTraits.ipynb  COCO Caption Specificity.ipynb  COCO Exploration.ipynb  Clustering COCO images.ipynb  Combined Analysis.ipynb  DebugLogs.ipynb  Discriminative.ipynb  FakeAnalysis.ipynb  Finding Images Matching Captions.ipynb  Finding captions to retype.ipynb  Gating.ipynb  Generate and Analyze Guessing Task.ipynb  GetCompletedParticipants.ipynb  LookAtAllLogs.ipynb  MergeDataFromAllExperiments.ipynb  Output Interventions Spacy.ipynb  Output Interventions.ipynb  Predict Specificity.ipynb  Process Detail Ratings.ipynb  Process Specificity Votes.ipynb  Sampling Sequence.ipynb  Similar Images.ipynb  Simple Specific Caption Generator.ipynb  Specificity Intervention Examples.ipynb  Specificity Manipulation Check.ipynb  Split out MTurk charges.ipynb  Statsmodels Analysis.ipynb  Suggest the Best.ipynb  Thoughtfulness.ipynb  Topic Labeling.ipynb  Visual Genome.ipynb  Word Choice investigations.ipynb
reports/: .gitignore  assertiveness_analysis.Rmd  cue_design_analysis.Rmd  do_bootstrap.R  do_bootstrap.sbatch  ideas_analysis.Rmd  submit_all.sh  visibility_analysis.Rmd  visibility_analysis_aside.Rmd  when-inspirations-requested-coded.md  wordchoice_new_analysis.Rmd
scripts/: assign_qualification_to_workers.py  backup_mturk.py  by_word.py  checkout-old.sh  collect_relevance_data.sh  combined_analysis.py  compute_gating_threshold.py  compute_gating_threshold_gather.py  count_workers.py  data_retention.py  dl-spacy  example_eval_collect.py  extract_wikipedia_texts.py  extract_wikis.sh  find_invalid_workers.py  get_category_membership.py  mturk.py  (+16 more)
(+147 files in other folders)
