[tool.poetry]
name = "textrec"
version = "0.1.0"
description = ""
authors = ["Kenneth C. Arnold <kcarnold@alum.mit.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.20.2"
tqdm = "^4.28"
scipy = "^1.2"
seaborn = "^0.9.0"
attrs = "^18.2"
cython = "^0.29.2"
datrie = "^0.7.1"
pandas = "^0.23.4"
cytoolz = "^0.9.0"
joblib = "^0.13.0"
nltk = "^3.4"
spacy = "^2.0"
#wordfreq = {path = "vendor/wordfreq/"}
#kenlm = { path = "vendor/kenlm" }

[tool.poetry.dev-dependencies]
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"