[tool.poetry]
name = "textrec"
version = "0.1.0"
description = ""
authors = ["Kenneth C. Arnold <kcarnold@alum.mit.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
tornado = "^5.1"
scikit-learn = "^0.21.1"
tqdm = "^4.32"
scipy = "=1.2.1"
seaborn = "^0.9.0"
attrs = "^19.1"
datrie = "^0.7.1"
pandas = "^0.24.2"
cytoolz = "^0.9.0"
joblib = "^0.13.2"
spacy = "^2.1"
wordfreq = "^2.2"
h5py = "^2.9"
nltk = "^3.4"
ujson = "^1.35"
torch = "^1.1"
pytorch-pretrained-bert = "^0.6.2"
kenlm = {git = "git@github.com:kcarnold/kenlm.git"}
en-core-web-md = {path = "vendor/en_core_web_md-2.1.0/"}
statsmodels = "^0.9.0"
patsy = "^0.5.1"
umap-learn = "^0.3.8"
ftfy = "^5.5"
gensim = "^3.7"
[tool.poetry.dev-dependencies]
ipython = "^7.5"
fabric = "^2.4"
boto3 = "^1.9"
jupyter = "^1.0"
patchwork = "^1.0"
setuptools = "^41.0"
wheel = "^0.33.4"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
